--- a/localization/spanish/ac_nickname_debug_l_spanish.yml
+++ b/localization/spanish/ac_nickname_debug_l_spanish.yml
@@ -1,50 +1,31 @@
-﻿﻿l_spanish:
- ### DEBUG DECISIONS ###
- ac_nickname_toggle_debug:0 "Activar/Desactivar Modo Debug de Apodos"
+﻿l_spanish:
+ ### DECISIONES DE DEBUG ###
+ ac_nickname_toggle_debug:0 "Alternar Modo Debug de Apodos"
  ac_nickname_toggle_debug_desc:0 "Activa o desactiva el modo debug para el sistema de apodos. El modo debug proporciona herramientas de prueba e información."
  ac_nickname_toggle_debug_tooltip:0 "Alternar modo debug para pruebas de apodos"
  ac_nickname_debug_mode_on_tt:0 "El modo debug está ahora [E]ACTIVADO[!E]. Ahora puedes acceder a las herramientas de prueba."
  ac_nickname_debug_mode_off_tt:0 "El modo debug está ahora [E]DESACTIVADO[!E]. Las herramientas de prueba están ocultas."
- 
- ac_nickname_force_check:0 "Forzar Verificación de Apodos"
- ac_nickname_force_check_desc:0 "Activa manualmente todos los eventos de asignación de apodos para probar cuáles calificas para recibir."
- ac_nickname_force_check_tooltip:0 "Verificar qué apodos puedes recibir"
- ac_nickname_force_check_tt:0 "Todos los eventos de apodos se activarán en los próximos días. Recibirás un apodo si cumples los requisitos."
- ac_nickname_already_has_nickname_tt:0 "Ya tienes un apodo. Límpialo primero para probar otros."
  
  ac_nickname_clear:0 "Limpiar Apodo"
  ac_nickname_clear_desc:0 "Elimina tu apodo actual para probar recibir uno nuevo."
  ac_nickname_clear_tooltip:0 "Eliminar tu apodo actual"
  ac_nickname_clear_tt:0 "Tu apodo ha sido eliminado. Ahora puedes recibir uno nuevo."
  
- ac_nickname_show_info:0 "Mostrar Elegibilidad para Apodos"
- ac_nickname_show_info_desc:0 "Muestra información detallada sobre tu elegibilidad para recibir apodos."
- ac_nickname_show_info_tooltip:0 "Verificar tu elegibilidad para apodos"
- ac_nickname_show_info_tt:0 "Tu información de elegibilidad:"
- ac_nickname_age_ok_tt:0 "[E]EDAD:[!E] ✓ Tienes 16+ años"
- ac_nickname_age_too_young_tt:0 "[E]EDAD:[!E] ✗ Eres demasiado joven (necesitas 16+)"
- ac_nickname_skill_ok_tt:0 "[E]HABILIDADES:[!E] ✓ Tienes al menos una habilidad en 9+"
- ac_nickname_skill_too_low_tt:0 "[E]HABILIDADES:[!E] ✗ Todas tus habilidades están por debajo de 9"
- ac_nickname_power_ok_tt:0 "[E]PODER:[!E] ✓ Tienes un título o posición en el consejo"
- ac_nickname_power_none_tt:0 "[E]PODER:[!E] ✗ Necesitas un título o posición en el consejo"
- ac_nickname_blocked_tt:0 "[E]ESTADO:[!E] ✗ Estás BLOQUEADO (encarcelado, incapacitado, o bloqueado manualmente)"
- ac_nickname_not_blocked_tt:0 "[E]ESTADO:[!E] ✓ NO estás bloqueado"
- 
  ac_nickname_manual_block:0 "Bloquear Apodos Manualmente"
- ac_nickname_manual_block_desc:0 "Evita que recibas cualquier apodo."
+ ac_nickname_manual_block_desc:0 "Impide que recibas cualquier apodo."
  ac_nickname_manual_block_tooltip:0 "Bloquear asignación de apodos para este personaje"
  ac_nickname_manual_block_tt:0 "Ya no recibirás apodos hasta que te desbloquees."
- ac_nickname_not_already_blocked_tt:0 "Actualmente no estás bloqueado"
+ ac_nickname_not_already_blocked_tt:0 "No estás bloqueado actualmente"
  
  ac_nickname_manual_unblock:0 "Desbloquear Apodos Manualmente"
  ac_nickname_manual_unblock_desc:0 "Permite que vuelvas a recibir apodos."
  ac_nickname_manual_unblock_tooltip:0 "Desbloquear asignación de apodos para este personaje"
- ac_nickname_manual_unblock_tt:0 "Ahora puedes recibir apodos nuevamente."
+ ac_nickname_manual_unblock_tt:0 "Ahora puedes recibir apodos de nuevo."
  
  ac_nickname_give_all:0 "Dar Apodos a Todos los Personajes"
  ac_nickname_give_all_desc:0 "Activa la asignación de apodos para TODOS los personajes vivos de 16+ años que no tengan apodo. Esto puede tardar un momento en procesarse."
  ac_nickname_give_all_tooltip:0 "Dar apodos a todos los personajes elegibles"
- ac_nickname_give_all_tt:0 "Todos los personajes vivos de 16+ años sin apodos serán evaluados para recibir uno. Este proceso puede tomar varios días del juego."
+ ac_nickname_give_all_tt:0 "Todos los personajes vivos de 16+ años sin apodos serán evaluados para la asignación de apodos. Este proceso puede tardar algunos días del juego."
  
  ac_nickname_clear_all:0 "Limpiar Todos los Apodos"
  ac_nickname_clear_all_desc:0 "Elimina los apodos de TODOS los personajes vivos en el mundo. ¡Usa con precaución!"
@@ -53,5 +34,5 @@
  
  ac_nickname_export_report:0 "Exportar Reporte de Apodos"
  ac_nickname_export_report_desc:0 "Genera un reporte detallado de todos los personajes con apodos y expórtalo a los logs del juego. El reporte se guardará en tu carpeta de logs de CK3."
- ac_nickname_export_report_tooltip:0 "Exportar datos de apodos a logs"
+ ac_nickname_export_report_tooltip:0 "Exportar datos de apodos a los logs"
  ac_nickname_export_report_tt:0 "El reporte de apodos ha sido exportado a:\n[E]Documents/Paradox Interactive/Crusader Kings III/logs/game.log[!E]\n\nEl reporte incluye:\n• ID del Personaje\n• Nombre del Personaje\n• Título Principal\n• Apodo Asignado"
