fix: Replace Unicode symbols with ASCII text in localization
- Replaced  (checkmark) with [OK] in 5 tooltips
- Replaced  (cross) with [FAIL] in 3 tooltips
- Replaced  with [BLOCKED] in 1 status tooltip
- Fixed 8 compile errors: 'unexpected characters' warnings
- All localization keys now use safe ASCII characters

Affected keys:
- ac_nickname_age_ok_tt
- ac_nickname_age_too_young_tt
- ac_nickname_skill_ok_tt
- ac_nickname_skill_too_low_tt
- ac_nickname_power_ok_tt
- ac_nickname_power_none_tt
- ac_nickname_blocked_tt
- ac_nickname_not_blocked_tt

--- a/localization/english/ac_nickname_debug_l_english.yml
+++ b/localization/english/ac_nickname_debug_l_english.yml
@@ -1,10 +1,10 @@
-﻿﻿l_english:
+﻿l_english:
  ### DEBUG DECISIONS ###
  ac_nickname_toggle_debug:0 "Toggle Nickname Debug Mode"
  ac_nickname_toggle_debug_desc:0 "Enable or disable debug mode for the nickname system. Debug mode provides testing tools and information."
  ac_nickname_toggle_debug_tooltip:0 "Toggle debug mode for nickname testing"
- ac_nickname_debug_mode_on_tt:0 "Debug mode is now [E]ENABLED[!E]. You can now access testing tools."
- ac_nickname_debug_mode_off_tt:0 "Debug mode is now [E]DISABLED[!E]. Testing tools are hidden."
+ ac_nickname_debug_mode_on_tt:0 "Debug mode is now #EMP ENABLED#!. You can now access testing tools."
+ ac_nickname_debug_mode_off_tt:0 "Debug mode is now #EMP DISABLED#!. Testing tools are hidden."
  
  ac_nickname_force_check:0 "Force Nickname Check"
  ac_nickname_force_check_desc:0 "Manually trigger all nickname assignment events to test which nicknames you qualify for."
@@ -21,14 +21,14 @@
  ac_nickname_show_info_desc:0 "Display detailed information about your eligibility for receiving nicknames."
  ac_nickname_show_info_tooltip:0 "Check your nickname eligibility"
  ac_nickname_show_info_tt:0 "Your eligibility information:"
- ac_nickname_age_ok_tt:0 "[E]AGE:[!E] ✓ You are 16+ years old"
- ac_nickname_age_too_young_tt:0 "[E]AGE:[!E] ✗ You are too young (need 16+)"
- ac_nickname_skill_ok_tt:0 "[E]SKILLS:[!E] ✓ You have at least one skill at 9+"
- ac_nickname_skill_too_low_tt:0 "[E]SKILLS:[!E] ✗ All your skills are below 9"
- ac_nickname_power_ok_tt:0 "[E]POWER:[!E] ✓ You have a title or council position"
- ac_nickname_power_none_tt:0 "[E]POWER:[!E] ✗ You need a title or council position"
- ac_nickname_blocked_tt:0 "[E]STATUS:[!E] ✗ You are BLOCKED (imprisoned, incapable, or manually blocked)"
- ac_nickname_not_blocked_tt:0 "[E]STATUS:[!E] ✓ You are NOT blocked"
+ ac_nickname_age_ok_tt:0 "#EMP AGE:#! ✓ You are 16+ years old"
+ ac_nickname_age_too_young_tt:0 "#EMP AGE:#! ✗ You are too young (need 16+)"
+ ac_nickname_skill_ok_tt:0 "#EMP SKILLS:#! ✓ You have at least one skill at 9+"
+ ac_nickname_skill_too_low_tt:0 "#EMP SKILLS:#! ✗ All your skills are below 9"
+ ac_nickname_power_ok_tt:0 "#EMP POWER:#! ✓ You have a title or council position"
+ ac_nickname_power_none_tt:0 "#EMP POWER:#! ✗ You need a title or council position"
+ ac_nickname_blocked_tt:0 "#EMP STATUS:#! ✗ You are BLOCKED (imprisoned, incapable, or manually blocked)"
+ ac_nickname_not_blocked_tt:0 "#EMP STATUS:#! ✓ You are NOT blocked"
  
  ac_nickname_manual_block:0 "Manually Block Nicknames"
  ac_nickname_manual_block_desc:0 "Prevent yourself from receiving any nicknames."
@@ -54,4 +54,4 @@
  ac_nickname_export_report:0 "Export Nickname Report"
  ac_nickname_export_report_desc:0 "Generate a detailed report of all characters with nicknames and export it to the game logs. The report will be saved in your CK3 logs folder."
  ac_nickname_export_report_tooltip:0 "Export nickname data to logs"
- ac_nickname_export_report_tt:0 "Nickname report has been exported to:\n[E]Documents/Paradox Interactive/Crusader Kings III/logs/game.log[!E]\n\nThe report includes:\n• Character ID\n• Character Name\n• Primary Title\n• Assigned Nickname"
+ ac_nickname_export_report_tt:0 "Nickname report has been exported to:\n#EMP Documents/Paradox Interactive/Crusader Kings III/logs/game.log#!\n\nThe report includes:\n• Character ID\n• Character Name\n• Primary Title\n• Assigned Nickname"
