feat: FASE 2 - Implement Hybrid Nickname System
MAJOR REFACTOR: Replace 43-event system with dynamic hybrid architecture

New System Components:
- Created ac_nickname_effects.txt with 6 master scripted_effects
- Single master event (ac_nickname.1) replaces all individual events
- Dynamic nickname assignment based on character evaluation

Scripted Effects Created:
1. ac_assign_dynamic_nickname_effect - Master evaluator
2. ac_assign_physical_nickname_effect - Physical traits (giant, dwarf, beauty, etc.)
3. ac_assign_martial_nickname_effect - Martial skill nicknames
4. ac_assign_diplomacy_nickname_effect - Diplomacy skill nicknames
5. ac_assign_stewardship_nickname_effect - Stewardship skill nicknames
6. ac_assign_intrigue_nickname_effect - Intrigue skill nicknames
7. ac_assign_learning_nickname_effect - Learning skill nicknames
8. ac_assign_faith_nickname_effect - Faith-based nicknames (Christianity, Islam, Norse, Hindu, Buddhist)

Benefits:
 Maintains all 2059 nicknames without 2000 individual events
 More maintainable and expandable
 Better performance (1 event vs 43 events per check)
 Easier to add new nickname categories
 Weight-based selection within categories
 Intelligent character evaluation (prioritizes physical > skills > faith)

Changes:
- Modified: common/on_action/ac_nickname_on_actions.txt (simplified to single event call)
- Added: common/scripted_effects/ac_nickname_effects.txt (619 lines)
- Replaced: events/ac_nickname_events.txt (1457 lines -> 52 lines)
- Archived: events/ac_nickname_events_OLD.txt.disabled (old 43-event system)

Validation:
- CK3-Tiger: 0 fatal errors, 0 critical errors
- 2127 warnings (only missing localizations - expected)
- UTF-8 BOM applied to all new files

Next Phase: FASE 3 - Localization of 2059 nicknames

--- a/localization/english/ac_nickname_debug_l_english.yml
+++ b/localization/english/ac_nickname_debug_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿﻿l_english:
  ### DEBUG DECISIONS ###
  ac_nickname_toggle_debug:0 "Toggle Nickname Debug Mode"
  ac_nickname_toggle_debug_desc:0 "Enable or disable debug mode for the nickname system. Debug mode provides testing tools and information."
@@ -21,14 +21,14 @@
  ac_nickname_show_info_desc:0 "Display detailed information about your eligibility for receiving nicknames."
  ac_nickname_show_info_tooltip:0 "Check your nickname eligibility"
  ac_nickname_show_info_tt:0 "Your eligibility information:"
- ac_nickname_age_ok_tt:0 "#EMP AGE:#! ✓ You are 16+ years old"
- ac_nickname_age_too_young_tt:0 "#EMP AGE:#! ✗ You are too young (need 16+)"
- ac_nickname_skill_ok_tt:0 "#EMP SKILLS:#! ✓ You have at least one skill at 9+"
- ac_nickname_skill_too_low_tt:0 "#EMP SKILLS:#! ✗ All your skills are below 9"
- ac_nickname_power_ok_tt:0 "#EMP POWER:#! ✓ You have a title or council position"
- ac_nickname_power_none_tt:0 "#EMP POWER:#! ✗ You need a title or council position"
- ac_nickname_blocked_tt:0 "#EMP STATUS:#! ✗ You are BLOCKED (imprisoned, incapable, or manually blocked)"
- ac_nickname_not_blocked_tt:0 "#EMP STATUS:#! ✓ You are NOT blocked"
+ ac_nickname_age_ok_tt:0 "#EMP AGE:#! [OK] You are 16+ years old"
+ ac_nickname_age_too_young_tt:0 "#EMP AGE:#! [FAIL] You are too young (need 16+)"
+ ac_nickname_skill_ok_tt:0 "#EMP SKILLS:#! [OK] You have at least one skill at 9+"
+ ac_nickname_skill_too_low_tt:0 "#EMP SKILLS:#! [FAIL] All your skills are below 9"
+ ac_nickname_power_ok_tt:0 "#EMP POWER:#! [OK] You have a title or council position"
+ ac_nickname_power_none_tt:0 "#EMP POWER:#! [FAIL] You need a title or council position"
+ ac_nickname_blocked_tt:0 "#EMP STATUS:#! [BLOCKED] You are BLOCKED (imprisoned, incapable, or manually blocked)"
+ ac_nickname_not_blocked_tt:0 "#EMP STATUS:#! [OK] You are NOT blocked"
  
  ac_nickname_manual_block:0 "Manually Block Nicknames"
  ac_nickname_manual_block_desc:0 "Prevent yourself from receiving any nicknames."
