Corregir concordancia de género en traducciones españolas
- Cambiar sustantivos femeninos de 'el' a 'la':
  * Armas: hacha, espada, lanza, maza, daga, flecha, ballesta
  * Animales: serpiente, víbora, araña, águila
  * Objetos: balanza, campana, vela, cerveza, cruz, cadena, garra
  * Construcciones: muralla, puerta, torre, forja, ciudad
  * Abstractos: muerte, batalla, guerra, victoria, justicia, gloria, etc.

- Corregir sustantivos compuestos sin sentido:
  * 'Azul Mejilla'  'de Mejilla Azul'
  * 'Carbón Ceja'  'de Ceja de Carbón'
  * 'Guerra Diente'  'Diente de Guerra'
  * 'Bruja Rompedor'  'Rompedor de Brujas'

- Agregar preposición 'de' en nombres mitológicos:
  * 'Hija Freya'  'Hija de Freya'
  * 'Hijo Thor'  'Hijo de Thor'

- Mejorar traducción: 'Asqueroso Pedo'  'Pedorrero'

--- a/localization/spanish/ac_nickname_l_spanish.yml
+++ b/localization/spanish/ac_nickname_l_spanish.yml
@@ -5,16 +5,16 @@
  nick_axe_of_vengeance_f:0 "la Hacha de Venganza"
  nick_bloodfury:0 "el Furia Sangrienta"
  nick_bloodfury_f:0 "la Furia Sangrienta"
- nick_blue_cheek:0 "el Azul Mejilla"
- nick_blue_cheek_f:0 "la Azul Mejilla"
+ nick_blue_cheek:0 "el de Mejilla Azul"
+ nick_blue_cheek_f:0 "la de Mejilla Azul"
  nick_boneblade:0 "el Hoja de Hueso"
  nick_boneblade_f:0 "la Hoja de Hueso"
- nick_coal_brow:0 "el Carbón Ceja"
- nick_coal_brow_f:0 "la Carbón Ceja"
+ nick_coal_brow:0 "el de Ceja de Carbón"
+ nick_coal_brow_f:0 "la de Ceja de Carbón"
  nick_custom_nickname:0 "el Costumbre Apodo"
  nick_custom_nickname_f:0 "la Costumbre Apodo"
- nick_daughter_freya:0 "el Hija Freya"
- nick_daughter_frigg:0 "el Hija Frigg"
+ nick_daughter_freya:0 "la Hija de Freya"
+ nick_daughter_frigg:0 "la Hija de Frigg"
  nick_death_claw:0 "el Muerte Garra"
  nick_death_claw_f:0 "la Muerte Garra"
  nick_dragonheart:0 "el Corazón de Dragón"
@@ -23,8 +23,8 @@
  nick_fast_sailing_f:0 "la Rápida Navegante"
  nick_fingerless:0 "el Sin Dedos"
  nick_fingerless_f:0 "la Sin Dedos"
- nick_foul_fart:0 "el Asqueroso Pedo"
- nick_foul_fart_f:0 "la Asquerosa Pedo"
+ nick_foul_fart:0 "el Pedorrero"
+ nick_foul_fart_f:0 "la Pedorrera"
  nick_gorehammer:0 "el Martillo Sangriento"
  nick_gorehammer_f:0 "la Martillo Sangriento"
  nick_hist_bloodaxe:0 "el Hacha de Sangre"
@@ -61,7 +61,7 @@
  nick_hist_the_abstemious_f:0 "la Abstemia"
  nick_hist_the_account:0 "el Cuenta"
  nick_hist_the_account_f:0 "la Cuenta"
- nick_hist_the_adder:0 "el Víbora"
+ nick_hist_the_adder:0 "la Víbora"
  nick_hist_the_adder_f:0 "la Víbora"
  nick_hist_the_adopted:0 "el Adoptado"
  nick_hist_the_adopted_f:0 "la Adoptada"
@@ -69,7 +69,7 @@
  nick_hist_the_alchemist_f:0 "la Alquimista"
  nick_hist_the_alderman:0 "el Concejal"
  nick_hist_the_alderman_f:0 "la Concejala"
- nick_hist_the_ale:0 "el Cerveza"
+ nick_hist_the_ale:0 "la Cerveza"
  nick_hist_the_ale_f:0 "la Cerveza"
  nick_hist_the_altar:0 "el Altar"
  nick_hist_the_altar_f:0 "la Altar"
@@ -95,7 +95,7 @@
  nick_hist_the_ardent_f:0 "la Ardiente"
  nick_hist_the_armourer:0 "el Armero"
  nick_hist_the_armourer_f:0 "la Armera"
- nick_hist_the_arrow:0 "el Flecha"
+ nick_hist_the_arrow:0 "la Flecha"
  nick_hist_the_arrow_f:0 "la Flecha"
  nick_hist_the_ascetic:0 "el Asceta"
  nick_hist_the_ascetic_f:0 "la Asceta"
@@ -117,17 +117,17 @@
  nick_hist_the_autumn_f:0 "la Otoño"
  nick_hist_the_avaricious:0 "el Avaricioso"
  nick_hist_the_avaricious_f:0 "la Avariciosa"
- nick_hist_the_axe:0 "el Hacha"
+ nick_hist_the_axe:0 "la Hacha"
  nick_hist_the_axe_f:0 "la Hacha"
  nick_hist_the_axebearer:0 "el Portador del Hacha"
  nick_hist_the_axebearer_f:0 "la Portadora del Hacha"
- nick_hist_the_bailey:0 "el Muralla"
+ nick_hist_the_bailey:0 "la Muralla"
  nick_hist_the_bailey_f:0 "la Muralla"
  nick_hist_the_bailiff:0 "el Alguacil"
  nick_hist_the_bailiff_f:0 "la Alguacil"
  nick_hist_the_baker:0 "el Panadero"
  nick_hist_the_baker_f:0 "la Panadera"
- nick_hist_the_balance:0 "el Balanza"
+ nick_hist_the_balance:0 "la Balanza"
  nick_hist_the_balance_f:0 "la Balanza"
  nick_hist_the_bald:0 "el Calvo"
  nick_hist_the_bald_f:0 "la Calva"
@@ -165,7 +165,7 @@
  nick_hist_the_bear_f:0 "la Oso"
  nick_hist_the_bearded:0 "el Barbudo"
  nick_hist_the_bearded_f:0 "la Barbuda"
- nick_hist_the_bell:0 "el Campana"
+ nick_hist_the_bell:0 "la Campana"
  nick_hist_the_bell_f:0 "la Campana"
  nick_hist_the_bellows:0 "el Fuelle"
  nick_hist_the_bellows_f:0 "la Fuelle"
@@ -185,7 +185,7 @@
  nick_hist_the_black_f:0 "la Negra"
  nick_hist_the_black_prince:0 "el Negro Príncipe"
  nick_hist_the_black_prince_f:0 "la Negra Príncipe"
- nick_hist_the_blade:0 "el Hoja"
+ nick_hist_the_blade:0 "la Hoja"
  nick_hist_the_blade_f:0 "la Hoja"
  nick_hist_the_blessed:0 "el Bendito"
  nick_hist_the_blessed_f:0 "la Bendita"
@@ -272,7 +272,7 @@
  nick_hist_the_campaigner_f:0 "la Campaña"
  nick_hist_the_canal:0 "el Canal"
  nick_hist_the_canal_f:0 "la Canal"
- nick_hist_the_candle:0 "el Vela"
+ nick_hist_the_candle:0 "la Vela"
  nick_hist_the_candle_f:0 "la Vela"
  nick_hist_the_carpenter:0 "el Carpintero"
  nick_hist_the_carpenter_f:0 "la Carpintera"
@@ -302,7 +302,7 @@
  nick_hist_the_censer_lord_f:0 "la Incensario Señor"
  nick_hist_the_ceremonious:0 "el Ceremonioso"
  nick_hist_the_ceremonious_f:0 "la Ceremoniosa"
- nick_hist_the_chain:0 "el Cadena"
+ nick_hist_the_chain:0 "la Cadena"
  nick_hist_the_chain_f:0 "la Cadena"
  nick_hist_the_chainclad:0 "el Vestido de Cadenas"
  nick_hist_the_chainclad_f:0 "la Vestida de Cadenas"
@@ -332,7 +332,7 @@
  nick_hist_the_cid_f:0 "la Cid"
  nick_hist_the_citadel:0 "el Ciudadela"
  nick_hist_the_citadel_f:0 "la Ciudadela"
- nick_hist_the_city:0 "el Ciudad"
+ nick_hist_the_city:0 "la Ciudad"
  nick_hist_the_city_f:0 "la Ciudad"
  nick_hist_the_cloak:0 "el Capa"
  nick_hist_the_cloak_f:0 "la Capa"
@@ -396,7 +396,7 @@
  nick_hist_the_crosier_f:0 "la Báculo"
  nick_hist_the_cross_standard:0 "el Cruz Estandarte"
  nick_hist_the_cross_standard_f:0 "la Cruz Estandarte"
- nick_hist_the_crossbow:0 "el Ballesta"
+ nick_hist_the_crossbow:0 "la Ballesta"
  nick_hist_the_crossbow_f:0 "la Ballesta"
  nick_hist_the_crossbowman:0 "el Ballestero"
  nick_hist_the_crossbowman_f:0 "la Ballestero"
@@ -418,7 +418,7 @@
  nick_hist_the_cupbearer_f:0 "la Copera"
  nick_hist_the_cutlass:0 "el Alfanje"
  nick_hist_the_cutlass_f:0 "la Alfanje"
- nick_hist_the_dagger:0 "el Daga"
+ nick_hist_the_dagger:0 "la Daga"
  nick_hist_the_dagger_f:0 "la Daga"
  nick_hist_the_dalmatic:0 "el Dalmática"
  nick_hist_the_dalmatic_f:0 "la Dalmática"
@@ -476,7 +476,7 @@
  nick_hist_the_dyer_f:0 "la Tintorera"
  nick_hist_the_dyke:0 "el Dique"
  nick_hist_the_dyke_f:0 "la Dique"
- nick_hist_the_eagle:0 "el Águila"
+ nick_hist_the_eagle:0 "la Águila"
  nick_hist_the_eagle_f:0 "la Águila"
  nick_hist_the_eagle_standard:0 "el Águila Estandarte"
  nick_hist_the_eagle_standard_f:0 "la Águila Estandarte"
@@ -554,7 +554,7 @@
  nick_hist_the_ford_keeper_f:0 "la Vado Guardiana"
  nick_hist_the_forerunner:0 "el Precursor"
  nick_hist_the_forerunner_f:0 "la Precursora"
- nick_hist_the_forge:0 "el Forja"
+ nick_hist_the_forge:0 "la Forja"
  nick_hist_the_forge_f:0 "la Forja"
  nick_hist_the_forsaken:0 "el Abandonado"
  nick_hist_the_forsaken_f:0 "la Abandonada"
@@ -590,7 +590,7 @@
  nick_hist_the_ganger_f:0 "la Capataz"
  nick_hist_the_gaoler:0 "el Carcelero"
  nick_hist_the_gaoler_f:0 "la Carcelera"
- nick_hist_the_gate:0 "el Puerta"
+ nick_hist_the_gate:0 "la Puerta"
  nick_hist_the_gate_f:0 "la Puerta"
  nick_hist_the_gatehouse:0 "el Casa de la Puerta"
  nick_hist_the_gatehouse_f:0 "la Casa de la Puerta"
@@ -666,7 +666,7 @@
  nick_hist_the_harbor_lord_f:0 "la Puerto Señor"
  nick_hist_the_harbour:0 "el Puerto"
  nick_hist_the_harbour_f:0 "la Puerto"
- nick_hist_the_harper:0 "el Arpista"
+ nick_hist_the_harper:0 "el/la Arpista"
  nick_hist_the_harper_f:0 "la Arpista"
  nick_hist_the_harrow:0 "el Rastra"
  nick_hist_the_harrow_f:0 "la Rastra"
@@ -827,7 +827,7 @@
  nick_hist_the_lame_king:0 "el Cojo Rey"
  nick_hist_the_lamp:0 "el Lámpara"
  nick_hist_the_lamp_f:0 "la Lámpara"
- nick_hist_the_lance:0 "el Lanza"
+ nick_hist_the_lance:0 "la Lanza"
  nick_hist_the_lance_f:0 "la Lanza"
  nick_hist_the_lance_of_faith:0 "el Lanza de Fe"
  nick_hist_the_lance_of_faith_f:0 "la Lanza de Fe"
@@ -922,7 +922,7 @@
  nick_hist_the_lowland_f:0 "la Tierras Bajas"
  nick_hist_the_lutist:0 "el Laudista"
  nick_hist_the_lutist_f:0 "la Laudista"
- nick_hist_the_mace:0 "el Maza"
+ nick_hist_the_mace:0 "la Maza"
  nick_hist_the_mace_f:0 "la Maza"
  nick_hist_the_macehand:0 "el Mano de Maza"
  nick_hist_the_macehand_f:0 "la Mano de Maza"
@@ -999,7 +999,7 @@
  nick_hist_the_mistborne_f:0 "la Nacida de la Niebla"
  nick_hist_the_mistcloak:0 "el Capa de Niebla"
  nick_hist_the_mistcloak_f:0 "la Capa de Niebla"
- nick_hist_the_mitre:0 "el Mitra"
+ nick_hist_the_mitre:0 "la Mitra"
  nick_hist_the_mitre_f:0 "la Mitra"
  nick_hist_the_moat:0 "el Foso"
  nick_hist_the_moat_f:0 "la Foso"
@@ -1171,7 +1171,7 @@
  nick_hist_the_ram_f:0 "la Ariete"
  nick_hist_the_ramhand:0 "el Mano de Ariete"
  nick_hist_the_ramhand_f:0 "la Mano de Ariete"
- nick_hist_the_rampart:0 "el Muralla"
+ nick_hist_the_rampart:0 "la Muralla"
  nick_hist_the_rampart_f:0 "la Muralla"
  nick_hist_the_raven:0 "el Cuervo"
  nick_hist_the_raven_f:0 "la Cuervo"
@@ -1298,9 +1298,9 @@
  nick_hist_the_sentinel_f:0 "la Centinela"
  nick_hist_the_serene:0 "el Sereno"
  nick_hist_the_serene_f:0 "la Serena"
- nick_hist_the_serpent:0 "el Serpiente"
+ nick_hist_the_serpent:0 "la Serpiente"
  nick_hist_the_serpent_f:0 "la Serpiente"
- nick_hist_the_shadow:0 "el Sombra"
+ nick_hist_the_shadow:0 "la Sombra"
  nick_hist_the_shadow_f:0 "la Sombra"
  nick_hist_the_shaven:0 "el Afeitado"
  nick_hist_the_shaven_f:0 "la Afeitada"
@@ -1363,7 +1363,7 @@
  nick_hist_the_spade_f:0 "la Pala"
  nick_hist_the_spark:0 "el Chispa"
  nick_hist_the_spark_f:0 "la Chispa"
- nick_hist_the_spear:0 "el Lanza"
+ nick_hist_the_spear:0 "la Lanza"
  nick_hist_the_spear_f:0 "la Lanza"
  nick_hist_the_spearhand:0 "el Mano de Lanza"
  nick_hist_the_spearhand_f:0 "la Mano de Lanza"
@@ -1450,7 +1450,7 @@
  nick_hist_the_swift_f:0 "la Veloz"
  nick_hist_the_swineherd:0 "el Porquero"
  nick_hist_the_swineherd_f:0 "la Porquera"
- nick_hist_the_sword:0 "el Espada"
+ nick_hist_the_sword:0 "la Espada"
  nick_hist_the_sword_f:0 "la Espada"
  nick_hist_the_swordbearer:0 "el Portador de Espada"
  nick_hist_the_swordbearer_f:0 "la Portadora de Espada"
@@ -1496,9 +1496,9 @@
  nick_hist_the_tonsured_f:0 "la Tonsurada"
  nick_hist_the_torch:0 "el Antorcha"
  nick_hist_the_torch_f:0 "la Antorcha"
- nick_hist_the_tower:0 "el Torre"
+ nick_hist_the_tower:0 "la Torre"
  nick_hist_the_tower_f:0 "la Torre"
- nick_hist_the_town:0 "el Ciudad"
+ nick_hist_the_town:0 "la Ciudad"
  nick_hist_the_town_f:0 "la Ciudad"
  nick_hist_the_tracker:0 "el Rastreador"
  nick_hist_the_tracker_f:0 "la Rastreadora"
@@ -1576,7 +1576,7 @@
  nick_hist_the_vintner_f:0 "la Vinatera"
  nick_hist_the_visionary:0 "el Visionario"
  nick_hist_the_visionary_f:0 "la Visionaria"
- nick_hist_the_vixen:0 "el Zorra"
+ nick_hist_the_vixen:0 "la Zorra"
  nick_hist_the_vixen_f:0 "la Zorra"
  nick_hist_the_voice:0 "el Voz"
  nick_hist_the_voice_f:0 "la Voz"
@@ -1720,7 +1720,7 @@
  nick_the_axe_of_order_f:0 "la Hacha de Orden"
  nick_the_azure_knight:0 "el Azur Caballero"
  nick_the_azure_knight_f:0 "la Azur Dama"
- nick_the_beast:0 "el Bestia"
+ nick_the_beast:0 "la Bestia"
  nick_the_beast_f:0 "la Bestia"
  nick_the_beggar_knight:0 "el Mendigo Caballero"
  nick_the_beggar_knight_f:0 "la Mendiga Dama"
@@ -1944,7 +1944,7 @@
  nick_the_sacred_mountain_f:0 "la Sagrada Montaña"
  nick_the_scarred:0 "el Cicatrizado"
  nick_the_scarred_f:0 "la Cicatrizada"
- nick_the_serpent:0 "el Serpiente"
+ nick_the_serpent:0 "la Serpiente"
  nick_the_serpent_f:0 "la Serpiente"
  nick_the_shadow_giant:0 "el Sombra Gigante"
  nick_the_shadow_giant_f:0 "la Sombra Gigante"
@@ -2050,10 +2050,10 @@
  nick_true_mane_f:0 "la Verdadera Melena"
  nick_two_fingers:0 "el Dos Dedos"
  nick_two_fingers_f:0 "la Dos Dedos"
- nick_war_tooth:0 "el Guerra Diente"
- nick_war_tooth_f:0 "la Guerra Diente"
- nick_witch_breaker:0 "el Bruja Rompedor"
- nick_witch_breaker_f:0 "la Bruja Rompedora"
+ nick_war_tooth:0 "el Diente de Guerra"
+ nick_war_tooth_f:0 "la Diente de Guerra"
+ nick_witch_breaker:0 "el Rompedor de Brujas"
+ nick_witch_breaker_f:0 "la Rompedora de Brujas"
 
  ### DECISIONES DE DEBUG ###
  ac_nickname_toggle_debug:0 "Activar/Desactivar Modo Debug de Apodos"
@@ -2111,3 +2111,14 @@
  ac_nickname_export_report_desc:0 "Genera un reporte detallado de todos los personajes con apodos y expórtalo a los registros del juego. El reporte se guardará en tu carpeta de registros de CK3."
  ac_nickname_export_report_tooltip:0 "Exportar datos de apodos a los registros"
  ac_nickname_export_report_tt:0 "El reporte de apodos ha sido exportado a:\n#EMP Documentos/Paradox Interactive/Crusader Kings III/logs/game.log#!\n\nEl reporte incluye:\n• ID del Personaje\n• Nombre del Personaje\n• Título Principal\n• Apodo Asignado"
+
+
+
+
+
+
+
+
+
+
+
